tests/sumo/pedestrian_model/striping/errors/disconnected_route/errors.sumo
Warning: Person 'p0' could not find route across junction 'C' from walkingArea ':C_w1' to edge 'CW', time=8.00.
Error: Disconnected walk for person 'p0'.
Quitting (on error).
